WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89315
Column progression direction cannot be set independently of writing direction
https://bugs.webkit.org/show_bug.cgi?id=89315
Summary
Column progression direction cannot be set independently of writing direction
mitz
Reported
2012-06-17 12:35:37 PDT
In a horizontal left-to-right multi-column block, columns are always laid out from left to right (when the column axis is horizontal) or from top to bottom (when the column axis is vertical).
Attachments
Add a column-progression property
(38.94 KB, patch)
2012-06-17 12:50 PDT
,
mitz
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-02
(609.70 KB, application/zip)
2012-06-17 13:59 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-06-17 12:50:01 PDT
Created
attachment 148021
[details]
Add a column-progression property
WebKit Review Bot
Comment 2
2012-06-17 13:59:05 PDT
Comment on
attachment 148021
[details]
Add a column-progression property
Attachment 148021
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12969543
New failing tests: svg/css/getComputedStyle-basic.xhtml fast/multicol/progression-reverse.html fast/css/getComputedStyle/computed-style.html fast/css/getComputedStyle/computed-style-without-renderer.html
WebKit Review Bot
Comment 3
2012-06-17 13:59:09 PDT
Created
attachment 148024
[details]
Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
mitz
Comment 4
2012-06-18 11:06:17 PDT
Fixed in <
http://trac.webkit.org/r120609
>.
Simon Fraser (smfr)
Comment 5
2021-08-02 11:03:16 PDT
<
rdar://11699375
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug