Source/WebCore/rendering/ColumnInfo.h
@@ -38,6 +38,7 @@ public:
         : m_desiredColumnWidth(0)
         , m_desiredColumnCount(1)
         , m_progressionAxis(InlineAxis)
+        , m_progressionIsReversed(false)
         , m_columnCount(1)
         , m_columnHeight(0)
         , m_minimumColumnHeight(0)
@@ -58,6 +59,9 @@ public:
 
     Axis progressionAxis() const { return m_progressionAxis; }
     void setProgressionAxis(Axis progressionAxis) { m_progressionAxis = progressionAxis; }
+
+    bool progressionIsReversed() const { return m_progressionIsReversed; }
+    void setProgressionIsReversed(bool reversed) { m_progressionIsReversed = reversed; }
 
     unsigned columnCount() const { return m_columnCount; }
     LayoutUnit columnHeight() const { return m_columnHeight; }
@@ -102,6 +106,7 @@ private:
     LayoutUnit m_desiredColumnWidth;
     unsigned m_desiredColumnCount;
     Axis m_progressionAxis;
+    bool m_progressionIsReversed;
 
     unsigned m_columnCount;
     LayoutUnit m_columnHeight;
