Source/WebCore/rendering/style/StyleMultiColData.cpp
@@ -38,6 +38,7 @@ StyleMultiColData::StyleMultiColData()
     , m_breakAfter(RenderStyle::initialPageBreak())
     , m_breakInside(RenderStyle::initialPageBreak())
     , m_axis(RenderStyle::initialColumnAxis())
+    , m_progression(RenderStyle::initialColumnProgression())
 {
 }
 
@@ -56,6 +57,7 @@ StyleMultiColData::StyleMultiColData(const StyleMultiColData& o)
     , m_breakAfter(o.m_breakAfter)
     , m_breakInside(o.m_breakInside)
     , m_axis(o.m_axis)
+    , m_progression(o.m_progression)
 {
 }
 
@@ -64,7 +66,8 @@ bool StyleMultiColData::operator==(const StyleMultiColData& o) const
     return m_width == o.m_width && m_count == o.m_count && m_gap == o.m_gap
            && m_rule == o.m_rule && m_visitedLinkColumnRuleColor == o.m_visitedLinkColumnRuleColor && m_breakBefore == o.m_breakBefore
            && m_autoWidth == o.m_autoWidth && m_autoCount == o.m_autoCount && m_normalGap == o.m_normalGap
-           && m_columnSpan == o.m_columnSpan && m_breakAfter == o.m_breakAfter && m_breakInside == o.m_breakInside && m_axis == o.m_axis;
+           && m_columnSpan == o.m_columnSpan && m_breakAfter == o.m_breakAfter && m_breakInside == o.m_breakInside && m_axis == o.m_axis
+           && m_progression == o.m_progression;
 }
 
 } // namespace WebCore
