Source/WebCore/rendering/style/StyleMultiColData.h
@@ -67,6 +67,7 @@ public:
     unsigned m_breakAfter : 2; // EPageBreak
     unsigned m_breakInside : 2; // EPageBreak
     unsigned m_axis : 2; // ColumnAxis
+    unsigned m_progression : 2; // ColumnProgression
 
 private:
     StyleMultiColData();
